; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_toDateString.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_toDateString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Dp_toDateString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Dp_toDateString(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [64 x i8], align 16
  %4 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call double @js_todate(i32* %5, i32 0)
  store double %6, double* %4, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = getelementptr inbounds [64 x i8], [64 x i8]* %3, i64 0, i64 0
  %9 = load double, double* %4, align 8
  %10 = call i32 @LocalTime(double %9)
  %11 = call i32 @fmtdate(i8* %8, i32 %10)
  %12 = call i32 @js_pushstring(i32* %7, i32 %11)
  ret void
}

declare dso_local double @js_todate(i32*, i32) #1

declare dso_local i32 @js_pushstring(i32*, i32) #1

declare dso_local i32 @fmtdate(i8*, i32) #1

declare dso_local i32 @LocalTime(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
